--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -48,9 +48,8 @@
     "next": "15.5.2",
     "octokit": "^3.2.2",
     "react": "^19.1.0",
-    "react-diff-view": "^3.3.2",
+    "@git-diff-view/react": "^0.0.35",
     "react-dom": "^19.1.0",
-    "refractor": "^5.0.0",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.5",
     "www": "^0.0.0",
