--- a/.github/workflows/release-updates.yml
+++ b/.github/workflows/release-updates.yml
@@ -214,7 +214,7 @@ jobs:
     name: macOS arm64
     needs: prepare-release
     environment: electron
-    runs-on: cmuxs-Mac-mini-2
+    runs-on: self-hosted
     defaults:
       run:
         working-directory: ./
@@ -318,7 +318,7 @@ jobs:
     name: macOS universal
     needs: prepare-release
     environment: electron
-    runs-on: cmuxs-Mac-mini
+    runs-on: self-hosted
     defaults:
       run:
         working-directory: ./
