--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,8 @@ tmp/
 
 cmux-proxy.tar.gz
 apps/www/scripts/pr-review/pr-review-inject.bundle.js
+
+# PR review evals
+apps/www/scripts/pr-review/evals/data/
+!apps/www/scripts/pr-review/evals/data/**/*.annotated.diff
+apps/www/scripts/pr-review/evals/results/
