--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -18,6 +18,7 @@
     "@playwright/mcp": "^0.0.44",
     "@xterm/addon-serialize": "^0.13.0",
     "@xterm/headless": "^5.5.0",
+    "chrome-devtools-mcp": "^0.9.0",
     "chromium-bidi": "^10.6.0",
     "express": "^4.18.2",
     "magnitude-core": "^0.3.0",
