--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -50,6 +50,10 @@
       "import": "./src/convex-ready.ts",
       "types": "./src/convex-ready.ts"
     },
+    "./convex-safe": {
+      "import": "./src/convex-safe.ts",
+      "types": "./src/convex-safe.ts"
+    },
     "./utils/typed-zid": {
       "import": "./src/utils/typed-zid.ts",
       "types": "./src/utils/typed-zid.ts"
