--- a/apps/chatgpt-app/package.json
+++ b/apps/chatgpt-app/package.json
@@ -19,6 +19,8 @@
     "lint": "echo 'TODO: add lint step for chatgpt-app'"
   },
   "dependencies": {
+    "@cmux/convex": "workspace:*",
+    "@cmux/shared": "workspace:*",
     "@stackframe/js": "^2.8.41",
     "@modelcontextprotocol/sdk": "^1.20.1",
     "convex": "^1.27.1",
