--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -131,6 +131,7 @@
     "react": "^19.1.0",
     "react-aria-components": "^1.12.1",
     "react-dom": "^19.1.0",
+    "react-zoom-pan-pinch": "^3.6.1",
     "react-markdown": "^10.1.0",
     "react-textarea-autosize": "^8.5.9",
     "remark-gfm": "^4.0.1",
