--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -36,7 +36,6 @@
     "@cmux/server": "workspace:*",
     "@cmux/shared": "workspace:*",
     "@cmux/www-openapi-client": "workspace:*",
-    "@emotion/is-prop-valid": "^1.2.2",
     "@codemirror/lang-cpp": "^6.0.3",
     "@codemirror/lang-css": "^6.3.1",
     "@codemirror/lang-go": "^6.0.1",
@@ -57,6 +56,7 @@
     "@codemirror/state": "^6.5.2",
     "@codemirror/view": "^6.38.4",
     "@convex-dev/react-query": "^0.0.0-alpha.11",
+    "@emotion/is-prop-valid": "^1.2.2",
     "@heroui/react": "^2.8.2",
     "@heroui/theme": "^2.4.23",
     "@lexical/code": "^0.32.1",
@@ -109,6 +109,7 @@
     "diff": "^8.0.2",
     "dockerode": "^4.0.2",
     "electron-context-menu": "^4.1.1",
+    "electron-store": "^11.0.2",
     "electron-updater": "^6.6.2",
     "engine.io-client": "^6.6.3",
     "engine.io-parser": "^5.2.1",
