--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -36,7 +36,6 @@
     "@cmux/server": "workspace:*",
     "@cmux/shared": "workspace:*",
     "@cmux/www-openapi-client": "workspace:*",
-    "@emotion/is-prop-valid": "^1.2.2",
     "@codemirror/lang-cpp": "^6.0.3",
     "@codemirror/lang-css": "^6.3.1",
     "@codemirror/lang-go": "^6.0.1",
@@ -57,6 +56,7 @@
     "@codemirror/state": "^6.5.2",
     "@codemirror/view": "^6.38.4",
     "@convex-dev/react-query": "^0.0.0-alpha.11",
+    "@emotion/is-prop-valid": "^1.2.2",
     "@heroui/react": "^2.8.2",
     "@heroui/theme": "^2.4.23",
     "@lexical/code": "^0.32.1",
@@ -71,10 +71,11 @@
     "@lezer/highlight": "^1.2.1",
     "@mantine/hooks": "^8.1.3",
     "@monaco-editor/react": "^4.7.0",
+    "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-popover": "^1.1.15",
-    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@radix-ui/react-visually-hidden": "^1.2.3",
     "@socket.io/component-emitter": "^3.1.2",
@@ -115,6 +116,7 @@
     "framer-motion": "^12.23.3",
     "fs-extra": "^11.3.1",
     "fuzzysort": "^3.1.0",
+    "gitdiff-parser": "^0.3.1",
     "graceful-fs": "^4.2.11",
     "jose": "^6.1.0",
     "js-yaml": "^4.1.0",
@@ -124,7 +126,7 @@
     "lexical": "^0.32.1",
     "lodash.escaperegexp": "^4.1.2",
     "lodash.isequal": "^4.5.0",
-    "lucide-react": "^0.525.0",
+    "lucide-react": "^0.552.0",
     "monaco-editor": "^0.53.0",
     "ms": "^2.1.3",
     "prismjs": "^1.30.0",
@@ -133,6 +135,7 @@
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
     "react-textarea-autosize": "^8.5.9",
+    "refractor": "^5.0.0",
     "remark-gfm": "^4.0.1",
     "sax": "^1.4.1",
     "semver": "^7.6.3",
