chore(codex-gpt-5-codex-high): for new cloud workspace, does it copy vscode settings and...

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -34,6 +34,10 @@
       "import": "./src/agentConfig.ts",
       "types": "./src/agentConfig.ts"
     },
+    "./editor-settings": {
+      "import": "./src/editor-settings.ts",
+      "types": "./src/editor-settings.ts"
+    },
     "./terminal-config": {
       "import": "./src/terminal-config.ts",
       "types": "./src/terminal-config.ts"
