chore(claude-sonnet-4-5): for "Search or paste a repo link..." we should also imple...

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -74,6 +74,10 @@
       "import": "./src/utils/parse-github-repo-url.ts",
       "types": "./src/utils/parse-github-repo-url.ts"
     },
+    "./utils/parse-local-repo-path": {
+      "import": "./src/utils/parse-local-repo-path.ts",
+      "types": "./src/utils/parse-local-repo-path.ts"
+    },
     "./utils/validate-exposed-ports": {
       "import": "./src/utils/validate-exposed-ports.ts",
       "types": "./src/utils/validate-exposed-ports.ts"
