chore(claude-sonnet-4-5): for "Search or paste a repo link..." we should also imple...

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -18,6 +18,10 @@
       "import": "./src/socket-client.ts",
       "types": "./src/socket-client.ts"
     },
+    "./node": {
+      "import": "./src/node.ts",
+      "types": "./src/node.ts"
+    },
     "./node/socket": {
       "import": "./src/node/socket-server.ts",
       "types": "./src/node/socket-server.ts"
