--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -174,12 +174,12 @@
     "node-abi": "^4.14.0",
     "npm-run-all": "^4.1.5",
     "png2icons": "^2.0.1",
-    "rolldown-vite": "^7.1.7",
+    "rolldown-vite": "^7.2.4",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.34.1",
-    "vite": "^7.0.0",
+    "vite": "^7.2.2",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "3.2.4"
+    "vitest": "^4.0.8"
   }
 }
