--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -77,6 +77,6 @@
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.38.0",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "3.2.4"
+    "vitest": "^4.0.8"
   }
 }
