--- a/apps/server/native/core/Cargo.toml
+++ b/apps/server/native/core/Cargo.toml
@@ -18,9 +18,19 @@ rayon = "1.10"
 dirs-next = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
+tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
 gix = { version = "0.66", default-features = true, features = ["status", "revision"] }
 similar = "2"
+hyper = { version = "0.14", default-features = false, features = ["client", "http1", "http2", "server", "tcp"] }
+hyper-rustls = { version = "0.24", default-features = false, features = ["http1", "http2", "tokio-runtime", "webpki-roots"] }
+tokio-util = "0.7"
+dashmap = "5"
+once_cell = "1"
+rand = { version = "0.8", features = ["std"] }
+base64 = "0.21"
+url = "2"
+tracing = "0.1"
+futures-util = "0.3"
 
 [dev-dependencies]
 tempfile = "3"
