--- a/crates/cmux-proxy/Cargo.toml
+++ b/crates/cmux-proxy/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 # Async runtime
 tokio = { version = "1", features = ["full"] }
 # HTTP server/client
-hyper = { version = "0.14", features = ["full"] }
+hyper = { version = "0.14", features = ["full", "backports"] }
 http = "0.2"
 bytes = "1"
 clap = { version = "4", features = ["derive", "env"] }
