--- a/apps/server/native/core/Cargo.toml
+++ b/apps/server/native/core/Cargo.toml
@@ -11,16 +11,28 @@ fuzz-tests = []
 crate-type = ["cdylib"]
 
 [dependencies]
+anyhow = "1"
+base64 = "0.22"
+dashmap = "5"
+dirs-next = "2"
+futures-util = "0.3"
+gix = { version = "0.66", default-features = true, features = ["status", "revision"] }
+hex = "0.4"
+hyper = { version = "0.14", features = ["full"] }
+hyper-rustls = { version = "0.24", default-features = false, features = ["http1", "http2", "tokio-runtime", "webpki-roots"] }
 napi = { version = "2", default-features = false, features = ["napi4", "tokio_rt"] }
 napi-derive = "2"
-anyhow = "1"
+once_cell = "1.19"
+parking_lot = "0.12"
+rand = "0.8"
 rayon = "1.10"
-dirs-next = "2"
+regex = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
-gix = { version = "0.66", default-features = true, features = ["status", "revision"] }
 similar = "2"
+tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
+tracing = "0.1"
+url = "2"
 
 [dev-dependencies]
 tempfile = "3"
