--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -38,6 +38,13 @@
     "@stackframe/stack": "^2.8.48",
     "@t3-oss/env-core": "^0.13.8",
     "@tanstack/react-query": "^5.86.2",
+    "@xterm/addon-attach": "^0.11.0",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/addon-search": "^0.15.0",
+    "@xterm/addon-unicode11": "^0.8.0",
+    "@xterm/addon-web-links": "^0.11.0",
+    "@xterm/addon-webgl": "^0.18.0",
+    "@xterm/xterm": "^5.5.0",
     "@vercel/functions": "^1.4.0",
     "ai": "^5.0.82",
     "class-variance-authority": "^0.7.1",
