--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "devDependencies": {
     "@eslint/js": "^9.34.0",
     "@t3-oss/env-core": "^0.13.8",
-    "@types/node-forge": "^1.3.14",
     "@typescript-eslint/eslint-plugin": "^8.43.0",
     "@typescript-eslint/parser": "^8.43.0",
     "eslint": "^9.34.0",
@@ -62,7 +61,6 @@
   "dependencies": {
     "ajv": "6.12.6",
     "ajv-keywords": "3.5.2",
-    "morphcloud": "^0.0.20",
-    "node-forge": "^1.3.1"
+    "morphcloud": "^0.0.20"
   }
 }
