--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -147,6 +147,7 @@
     "tailwindcss": "^4.1.11",
     "tiny-typed-emitter": "^2.1.0",
     "universalify": "^2.0.1",
+    "unplugin": "^2.3.10",
     "utf-8-validate": "^6.0.5",
     "vscode-icons-js": "^11.6.1",
     "ws": "^8.17.1",
