--- a/packages/sandbox/Cargo.toml
+++ b/packages/sandbox/Cargo.toml
@@ -26,11 +26,15 @@ clap = { version = "4.5", features = ["derive", "env"] }
 crossterm = "0.27"
 futures = "0.3"
 portable-pty = "0.8"
+rcgen = "0.11"
 reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "http2"] }
+rustls = { version = "0.23.35", features = ["ring"] }
+rustls-pki-types = "1.13.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
 tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "signal", "process", "fs", "net", "time", "io-std"] }
+tokio-rustls = "0.26.4"
 tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
 tracing = "0.1"
 tracing-appender = "0.2"
