--- a/packages/sandbox/Cargo.toml
+++ b/packages/sandbox/Cargo.toml
@@ -47,7 +47,10 @@ uuid = { version = "1", features = ["v4", "serde"] }
 which = "6.0"
 ratatui = "0.29"
 tui-textarea = "0.7"
-tui-markdown = { version = "0.3.6", features = ["highlight-code"] }
+tui-markdown = { version = "0.3.6" }
+two-face = { version = "0.4", default-features = false, features = ["syntect-onig"] }
+syntect = "5"
+pulldown-cmark = "0.12"
 agent-client-protocol = { version = "0.7.0", features = ["unstable"] }
 tokio-util = { version = "0.7", features = ["compat"] }
 url = "2.5"
