fix: Add Makefile and setup script for Convex dev env
Introduces a Makefile with common Convex Docker Compose commands and a setup-convex-env.sh script to automate environment variable configuration for local development. Updates docker-compose.convex.yml to use custom backend and dashboard images.

--- a/.devcontainer/docker-compose.convex.yml
+++ b/.devcontainer/docker-compose.convex.yml
@@ -1,6 +1,6 @@
 services:
   convex_backend:
-    image: ghcr.io/get-convex/convex-backend:6efab6f2b6c182b90255774d747328cfc7b80dd9
+    image: karl8080/convex-backend:latest
     stop_grace_period: 10s
     stop_signal: SIGINT
     ports:
@@ -40,7 +40,7 @@ services:
       start_period: 10s
 
   convex_dashboard:
-    image: ghcr.io/get-convex/convex-dashboard:6efab6f2b6c182b90255774d747328cfc7b80dd9
+    image: karl8080/convex-dashboard:latest
     stop_grace_period: 10s
     stop_signal: SIGINT
     ports:
