ci: Support configurable test user ID via env var
Adds STACK_TEST_USER_ID to CI workflow environments and updates test utility to use the environment variable if set. This allows tests to run with a configurable test user, improving flexibility for local and CI integration tests. Also trims whitespace from file size calculations in the collect-relevant-diff.sh script for more accurate results.

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -47,6 +47,8 @@ jobs:
           NEXT_PUBLIC_STACK_PROJECT_ID: ${{ secrets.NEXT_PUBLIC_STACK_PROJECT_ID }}
           NEXT_PUBLIC_STACK_PUBLISHABLE_CLIENT_KEY: ${{ secrets.NEXT_PUBLIC_STACK_PUBLISHABLE_CLIENT_KEY }}
           NEXT_PUBLIC_CONVEX_URL: ${{ secrets.NEXT_PUBLIC_CONVEX_URL }}
+          # Test user
+          STACK_TEST_USER_ID: ${{ secrets.STACK_TEST_USER_ID }}
         run: |
           set -euo pipefail
           bun run check & pid1=$!
