--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -84,4 +84,6 @@ jobs:
           NEXT_PUBLIC_CONVEX_URL: ${{ secrets.NEXT_PUBLIC_CONVEX_URL }}
           NEXT_PUBLIC_WWW_ORIGIN: ${{ secrets.NEXT_PUBLIC_WWW_ORIGIN }}
           NEXT_PUBLIC_GITHUB_APP_SLUG: ${{ secrets.NEXT_PUBLIC_GITHUB_APP_SLUG }}
+          # Test user
+          STACK_TEST_USER_ID: ${{ secrets.STACK_TEST_USER_ID }}
         run: bun run test
