--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,9 +32,6 @@ jobs:
         with:
           node-version: 24
 
-      - name: Setup Rust
-        uses: dtolnay/rust-toolchain@stable
-
       - name: Cache Bun install cache
         uses: actions/cache@v4
         with:
@@ -43,14 +40,6 @@ jobs:
           key: ${{ runner.os }}-bun-install-${{ hashFiles('**/bun.lock') }}
           restore-keys: |
             ${{ runner.os }}-bun-install-
-
-      - name: Cache Cargo registry + build
-        uses: Swatinem/rust-cache@v2
-        with:
-          workspaces: |
-            apps/server/native/core
-            crates/cmux-env
-            crates/cmux-proxy
 
       - name: Install dependencies
         run: bun install --frozen-lockfile
@@ -63,8 +52,8 @@ jobs:
           CMUX_BUILD_LINUX: "0"
           # Skip Docker E2E tests in CI for stability/speed
           CMUX_SKIP_DOCKER_TESTS: "1"
-          # Skip slow cargo crates handled in dedicated workflows
-          CMUX_SKIP_CARGO_CRATES: "sandbox"
+          # Skip cargo crates handled in dedicated workflows
+          CMUX_SKIP_CARGO_CRATES: "sandbox,cmux-env,cmux-xterm,cmux-proxy,global-proxy,server/native/core"
           # Stack Auth env vars
           STACK_SECRET_SERVER_KEY: ${{ secrets.STACK_SECRET_SERVER_KEY }}
           STACK_SUPER_SECRET_ADMIN_KEY: ${{ secrets.STACK_SUPER_SECRET_ADMIN_KEY }}
