--- a/apps/manaflowX/package.json
+++ b/apps/manaflowX/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint . --ignore-pattern \"convex/_generated/**\""
   },
   "dependencies": {
+    "@stackframe/stack": "^2.8.54",
     "convex": "^1.29.3",
     "next": "16.0.7",
     "react": "^19.2.1",
