--- a/apps/manaflowX/.gitmodules
+++ b/apps/manaflowX/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "dev-docs/beads"]
 	path = dev-docs/beads
 	url = https://github.com/steveyegge/beads
+[submodule "dev-docs/streamdown"]
+	path = dev-docs/streamdown
+	url = https://github.com/vercel/streamdown.git
