--- a/apps/manaflowX/package.json
+++ b/apps/manaflowX/package.json
@@ -25,6 +25,7 @@
     "opencode-ai": "^1.0.134",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
+    "streamdown": "^1.6.10",
     "workflow": "^4.0.1-beta.28"
   },
   "devDependencies": {
