--- a/apps/manaflowX/sandbox/worker/package.json
+++ b/apps/manaflowX/sandbox/worker/package.json
@@ -15,6 +15,6 @@
   "dependencies": {
     "@anthropic-ai/claude-agent-sdk": "^0.1.60",
     "@opencode-ai/sdk": "^1.0.134",
-    "opencode-ai": "^1.0.134"
+    "bun-pty": "^0.4.2"
   }
 }
