--- a/apps/manaflowX/tsconfig.json
+++ b/apps/manaflowX/tsconfig.json
@@ -40,6 +40,7 @@
     "node_modules",
     "dev-docs",
     "sandbox/worker/grok-code",
-    "sandbox/opencode-plugin"
+    "sandbox/opencode-plugin",
+    "sandbox/mcp"
   ]
 }
