--- a/apps/manaflowX/package.json
+++ b/apps/manaflowX/package.json
@@ -27,6 +27,7 @@
     "convex": "^1.29.3",
     "morphcloud": "^0.0.20",
     "next": "16.0.7",
+    "next-themes": "^0.4.6",
     "opencode-ai": "^1.0.134",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
