Add generic deploy scripts for Convex
Introduces 'convex:deploy' and 'deploy' scripts to allow deploying Convex using the default environment file. This complements the existing production deploy scripts for more flexible deployment options.

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "generate-morphcloud-openapi-client": "cd packages/morphcloud-openapi-client && bun run generate",
     "build:mac-arm64-prod": "bash scripts/build-prod-mac-arm64.sh",
     "convex:deploy:prod": "(cd packages/convex && bun run deploy:prod)",
+    "convex:deploy": "(cd packages/convex && bun run deploy)",
     "convex:setup": "bun run --env-file .env --cwd packages/convex setup"
   },
   "type": "module",
