--- a/packages/convex/package.json
+++ b/packages/convex/package.json
@@ -9,6 +9,7 @@
     "typecheck": "tsc --noEmit -p tsconfig.json",
     "test": "vitest run",
     "deploy:prod": "convex deploy --env-file ../../.env.production",
+    "deploy": "convex deploy --env-file ../../.env",
     "setup": "bun run scripts/setup.ts",
     "setup0": "CONVEX_DEPLOYMENT= CONVEX_AGENT_MODE=anonymous bunx convex dev --configure new --dev-deployment local --project cmux_local --once --run seed"
   },
