chore(claude-opus-4-5): i want to make it possible to run multiple instances of c...

--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "dotenv -e ../../.env -- next dev --port 9779",
+    "dev": "dotenv -e ../../.env -- next dev --port ${CMUX_WWW_PORT:-9779}",
     "prebuild": "bun run generate-openapi-client",
     "build": "./scripts/build.sh",
     "start": "next start",
