--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -130,6 +130,7 @@
   "devDependencies": {
     "@types/node": "^24.9.1",
     "@xterm/xterm": "^5.5.0",
+    "react": "^19.2.2",
     "typescript": "^5.9.3",
     "socket.io": "^4.8.1",
     "vitest": "^3.2.4"
