chore: deprecate morphcloud-openapi-client
Mark the package as deprecated in preparation for removing it
in favor of the official morphcloud npm package.

--- a/packages/morphcloud-openapi-client/package.json
+++ b/packages/morphcloud-openapi-client/package.json
@@ -1,4 +1,5 @@
 {
+  "$comment": "DEPRECATED: This package will be removed in favor of the official morphcloud npm package",
   "name": "@cmux/morphcloud-openapi-client",
   "version": "0.1.0",
   "private": true,
