--- a/packages/0github-cli/tsconfig.json
+++ b/packages/0github-cli/tsconfig.json
@@ -10,7 +10,9 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "declaration": true,
-    "noEmit": true
+    "noEmit": true,
+    "jsx": "react-jsx",
+    "jsxImportSource": "react"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
