feat: add syntax highlighting, min sidebar width, focus indicator
- Add cli-highlight for syntax highlighting based on file extension
- Set minimum sidebar width to 36 chars
- Show focus indicator: cyan border + arrow on focused pane
- Show [FILES] or [DIFF] in status bar to indicate active pane
- Selected item in unfocused file list shows gray background
- Add language tag in diff header (e.g., [python])

--- a/packages/0github-cli/package.json
+++ b/packages/0github-cli/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "chalk": "^5.3.0",
+    "cli-highlight": "^2.1.11",
     "commander": "^12.1.0",
     "ink": "^6.0.0",
     "react": "^19.0.0"
