feat: add cmux-pty server with VSCode terminal integration
- Replace cmux-xterm with new cmux-pty Rust server
- Add VSCode extension terminal profile provider for proper integration
- Add REST API for terminal CRUD operations
- Add WebSocket support for terminal I/O with scrollback replay
- Create VSCode-like tabbed UI at localhost:39383
- Increase terminal scrollback to 100,000 lines
- Add ~/.local/bin and ~/.bun/bin to PATH by default
- Use zsh as default shell instead of bash
- Auto-start cmux-pty and IDE services via systemd

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -18,15 +18,9 @@
   "categories": [
     "Other"
   ],
-  "extensionDependencies": [
-    "vscode.git"
-  ],
   "activationEvents": [
-    "*",
     "onStartupFinished",
-    "onCommand:cmux.helloWorld",
-    "onCommand:cmux.run",
-    "onCommand:cmux.showOutput"
+    "onTerminalProfile:cmux.terminal"
   ],
   "main": "./out/extension.cjs",
   "contributes": {
@@ -46,8 +40,46 @@
       {
         "command": "cmux.git.openAllChangesAgainstBase",
         "title": "cmux: Open All Changes vs Base"
+      },
+      {
+        "command": "cmux.newTerminal",
+        "title": "cmux: New Terminal"
+      },
+      {
+        "command": "cmux.listSessions",
+        "title": "cmux: List PTY Sessions"
+      },
+      {
+        "command": "cmux.renameTerminal",
+        "title": "cmux: Rename Terminal"
       }
-    ]
+    ],
+    "terminal": {
+      "profiles": [
+        {
+          "id": "cmux.terminal",
+          "title": "cmux"
+        }
+      ]
+    },
+    "configuration": {
+      "title": "cmux",
+      "properties": {
+        "cmux.ptyServerUrl": {
+          "type": "string",
+          "default": "http://localhost:39383",
+          "description": "URL of the PTY server"
+        },
+        "cmux.defaultShell": {
+          "type": "string",
+          "default": "/bin/zsh",
+          "description": "Default shell for new terminals"
+        }
+      }
+    },
+    "configurationDefaults": {
+      "terminal.integrated.defaultProfile.linux": "cmux"
+    }
   },
   "scripts": {
     "vscode:prepublish": "bun run compile-bun",
