--- a/crates/cmux-pty/Cargo.toml
+++ b/crates/cmux-pty/Cargo.toml
@@ -20,6 +20,18 @@ portable-pty = "0.8"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
+# CLI
+clap = { version = "4", features = ["derive", "env"] }
+
+# HTTP client for CLI
+reqwest = { version = "0.12", features = ["json"] }
+
+# WebSocket client for attach
+tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
+
+# Terminal handling for attach
+crossterm = "0.28"
+
 # Utilities
 uuid = { version = "1", features = ["v4"] }
 futures = "0.3"
@@ -28,6 +40,7 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 anyhow = "1"
 thiserror = "1"
+url = "2"
 
 [dev-dependencies]
 tower = { version = "0.4", features = ["util"] }
