--- a/crates/cmux-pty/Cargo.toml
+++ b/crates/cmux-pty/Cargo.toml
@@ -23,11 +23,11 @@ serde_json = "1"
 # CLI
 clap = { version = "4", features = ["derive", "env"] }
 
-# HTTP client for CLI
-reqwest = { version = "0.12", features = ["json"] }
+# HTTP client for CLI (use rustls to avoid OpenSSL dependency)
+reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
 
-# WebSocket client for attach
-tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
+# WebSocket client for attach (use rustls to avoid OpenSSL dependency)
+tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
 
 # Terminal handling for attach
 crossterm = "0.28"
