--- a/.github/workflows/morph-snapshot.yml
+++ b/.github/workflows/morph-snapshot.yml
@@ -57,10 +57,27 @@ jobs:
       - name: Install dependencies
         run: bun install --frozen-lockfile
 
-      - name: Run morph snapshot
+      - name: Run morph snapshot (with retry)
         env:
           MORPH_API_KEY: ${{ secrets.MORPH_API_KEY }}
-        run: uv run ./scripts/snapshot.py
+        run: |
+          max_attempts=3
+          attempt=1
+          while [ $attempt -le $max_attempts ]; do
+            echo "Attempt $attempt of $max_attempts"
+            if uv run ./scripts/snapshot.py; then
+              echo "Snapshot completed successfully"
+              exit 0
+            fi
+            echo "Attempt $attempt failed"
+            if [ $attempt -lt $max_attempts ]; then
+              echo "Waiting 30 seconds before retry..."
+              sleep 30
+            fi
+            attempt=$((attempt + 1))
+          done
+          echo "All $max_attempts attempts failed"
+          exit 1
 
       - name: Check for changes
         id: changes
