feat: add cmux-pty server with VSCode terminal integration (#1326)
* feat: add cmux-pty server with VSCode terminal integration

- Replace cmux-xterm with new cmux-pty Rust server
- Add VSCode extension terminal profile provider for proper integration
- Add REST API for terminal CRUD operations
- Add WebSocket support for terminal I/O with scrollback replay
- Create VSCode-like tabbed UI at localhost:39383
- Increase terminal scrollback to 100,000 lines
- Add ~/.local/bin and ~/.bun/bin to PATH by default
- Use zsh as default shell instead of bash
- Auto-start cmux-pty and IDE services via systemd

* fix: rename cmux-xterm references to cmux-pty

- Rename workflow file from cmux-xterm.yml to cmux-pty.yml
- Update tests.yml skip list
- Update snapshot.py task names and API endpoints
- Update docker-shell.sh help text

* style: format Rust code with cargo fmt

* fix: remove dead code and unused enum variants

* fix: update return type to include id in createPtyAndGetTerminal

* feat: add WebSocket event handling for real-time terminal updates in UI

* fix: prevent duplicate terminals by letting WebSocket events handle UI updates

* fix: use null byte prefix for control messages to prevent misinterpretation

- Prefix exit events with \x00 to distinguish from regular PTY output
- User programs printing JSON can no longer accidentally close terminals
- Also fix task_build_cmux_xterm function name to task_build_cmux_pty

* fix: set SHELL env var when spawning PTY process

* fix: preserve PTYs across page refresh by not deleting on extension deactivation

* Fix terminal persistence across page refresh (tmux-style)

Remove DELETE-on-close logic from terminal handlers. PTYs now persist on
the server like tmux sessions - they survive page refresh/reconnection.

PTYs are only deleted when:
1. User explicitly exits the shell (process ends, server broadcasts pty_deleted)
2. Server explicitly deletes them

This removes hacky timing workarounds and aligns with persistent session d

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -82,6 +82,10 @@
       "import": "./src/node/convex-cache.ts",
       "types": "./src/node/convex-cache.ts"
     },
+    "./cmux-pty-client": {
+      "import": "./src/cmux-pty-client.ts",
+      "types": "./src/cmux-pty-client.ts"
+    },
     "./utils/format-env-vars-content": {
       "import": "./src/utils/format-env-vars-content.ts",
       "types": "./src/utils/format-env-vars-content.ts"
