--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -25,12 +25,14 @@
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.8.0",
     "undici": "^6.21.3",
+    "ws": "^8.18.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/multer": "^1.4.11",
     "@types/node": "^24.9.1",
+    "@types/ws": "^8.5.13",
     "socket.io-client": "^4.8.0",
     "tsx": "^4.7.1",
     "vitest": "3.2.4"
