chore(claude-opus-4-5): in this part of the code. we should actually be using the...

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -109,6 +109,18 @@
     "./components/vnc-viewer": {
       "import": "./src/components/vnc-viewer.tsx",
       "types": "./src/components/vnc-viewer.tsx"
+    },
+    "./environment-config": {
+      "import": "./src/environment-config/index.ts",
+      "types": "./src/environment-config/index.ts"
+    },
+    "./components/environment-config": {
+      "import": "./src/components/environment-config/index.ts",
+      "types": "./src/components/environment-config/index.ts"
+    },
+    "./hooks/use-environment-config": {
+      "import": "./src/hooks/use-environment-config.ts",
+      "types": "./src/hooks/use-environment-config.ts"
     }
   },
   "peerDependencies": {
