chore(claude-opus-4-5): in this part of the code. we should actually be using the...

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -109,6 +109,14 @@
     "./components/vnc-viewer": {
       "import": "./src/components/vnc-viewer.tsx",
       "types": "./src/components/vnc-viewer.tsx"
+    },
+    "./environment-config": {
+      "import": "./src/environment-config/index.ts",
+      "types": "./src/environment-config/index.ts"
+    },
+    "./components/framework-logos": {
+      "import": "./src/components/framework-logos.tsx",
+      "types": "./src/components/framework-logos.tsx"
     }
   },
   "peerDependencies": {
