feat(worker): add session recording with ffmpeg and R2 upload
- Add sessionRecorder.ts module for recording VNC display via ffmpeg x11grab
- Add Convex schema, mutations, and HTTP endpoints for session recordings
- Integrate recording lifecycle into createTerminal for both cmux-pty and tmux backends
- Start recording when terminal is created, stop on completion, fail on error
- Upload video and trajectory JSONL files to R2 using presigned URLs
- Update morph snapshots to v43 with ffmpeg installed

--- a/packages/convex/package.json
+++ b/packages/convex/package.json
@@ -31,6 +31,8 @@
     "@ai-sdk/gateway": "^1.0.28",
     "@ai-sdk/openai": "^2.0.19",
     "@ai-sdk/provider-utils": "^3.0.9",
+    "@aws-sdk/client-s3": "^3.958.0",
+    "@aws-sdk/s3-request-presigner": "^3.958.0",
     "@cmux/morphcloud-openapi-client": "workspace:*",
     "@cmux/shared": "workspace:*",
     "@convex-dev/migrations": "^0.2.9",
