Add Sentry SDK for crash reporting and error tracking
- Add sentry-cocoa package dependency
- Initialize SentrySDK with environment-based config (dev/beta/prod)
- DSN placeholder to be configured via wizard or manually

--- a/ios-app/project.yml
+++ b/ios-app/project.yml
@@ -14,6 +14,9 @@ packages:
   ConvexMobile:
     url: https://github.com/get-convex/convex-swift
     from: "0.1.0"
+  Sentry:
+    url: https://github.com/getsentry/sentry-cocoa
+    from: "8.0.0"
 
 targets:
   cmux:
@@ -24,6 +27,7 @@ targets:
       - Assets.xcassets
     dependencies:
       - package: ConvexMobile
+      - package: Sentry
     settings:
       base:
         MARKETING_VERSION: "1.0"
