feat: add Unix socket support for PTY operations
Remove per-sandbox cmux-pty HTTP server by routing PTY operations
through the bridge socket. sandboxd now handles PTY directly via
nsenter without the overhead of a separate process and HTTP proxy.

- Add bridge socket protocol types for PTY list/get/create/input/resize/capture/delete
- Update cmux-pty CLI to use socket with HTTP fallback
- Update VSCode extension to use socket when available
- Fix server.rs PTY handler compilation issues

--- a/crates/cmux-pty/Cargo.toml
+++ b/crates/cmux-pty/Cargo.toml
@@ -44,6 +44,7 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 anyhow = "1"
 thiserror = "1"
 url = "2"
+base64 = "0.22"
 
 # Unix signal handling
 nix = { version = "0.29", features = ["signal"] }
