--- a/.github/workflows/release-on-tag.yml
+++ b/.github/workflows/release-on-tag.yml
@@ -615,6 +615,7 @@ jobs:
       - name: Build unsigned macOS arm64 artifacts
         env:
           CSC_IDENTITY_AUTO_DISCOVERY: "false"
+          NODE_OPTIONS: "--max-old-space-size=6144"
         working-directory: apps/client
         shell: bash
         run: |
@@ -735,6 +736,7 @@ jobs:
       - name: Build unsigned macOS universal artifacts
         env:
           CSC_IDENTITY_AUTO_DISCOVERY: "false"
+          NODE_OPTIONS: "--max-old-space-size=6144"
         working-directory: apps/client
         shell: bash
         run: |
